{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 14,
  "lineage": "61333a24-4131-7b27-0742-3cd41bd1c8ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402667424245:route-table/rtb-07591f63c7213c09f",
            "default_route_table_id": "rtb-07591f63c7213c09f",
            "id": "rtb-07591f63c7213c09f",
            "owner_id": "402667424245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9e43b511d73ac70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "teste-main-rtb"
            },
            "tags_all": {
              "Name": "teste-main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d8b5f606dc60f76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cliente-igw",
            "aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_teste",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e4e35cccc6189f4",
            "arn": "arn:aws:ec2:us-east-1:402667424245:instance/i-077e14c389835dd28",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077e14c389835dd28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "backstage_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cfb35d8ab586e6b8",
            "private_dns": "ip-10-0-1-7.ec2.internal",
            "private_ip": "10.0.1.7",
            "public_ip": "54.237.244.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0385002b449e8a6a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c89d06863400a9ce",
            "tags": {
              "Name": "teste-backstage"
            },
            "tags_all": {
              "Name": "teste-backstage"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-092e453285ed54544"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.Public_Subnet",
            "aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cliente-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402667424245:internet-gateway/igw-0f9e43b511d73ac70",
            "id": "igw-0f9e43b511d73ac70",
            "owner_id": "402667424245",
            "tags": {
              "Name": "teste-igw"
            },
            "tags_all": {
              "Name": "teste-igw"
            },
            "vpc_id": "vpc-01d8b5f606dc60f76"
          },
          "dependencies": [
            "aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402667424245:security-group/sg-092e453285ed54544",
            "description": "Permitir acesso SSH na maquina",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092e453285ed54544",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH para maquina de teste",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Acesso SSH",
            "name_prefix": "",
            "owner_id": "402667424245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Permitir SSH"
            },
            "tags_all": {
              "Name": "Permitir SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d8b5f606dc60f76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402667424245:subnet/subnet-0c89d06863400a9ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c89d06863400a9ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "402667424245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teste-Public-subnet"
            },
            "tags_all": {
              "Name": "teste-Public-subnet"
            },
            "vpc_id": "vpc-01d8b5f606dc60f76"
          },
          "dependencies": [
            "aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_teste",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402667424245:vpc/vpc-01d8b5f606dc60f76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000b819a27f605771",
            "default_route_table_id": "rtb-07591f63c7213c09f",
            "default_security_group_id": "sg-096a7281346d95814",
            "dhcp_options_id": "dopt-7d004107",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01d8b5f606dc60f76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07591f63c7213c09f",
            "owner_id": "402667424245",
            "tags": {
              "Name": "teste-vpc"
            },
            "tags_all": {
              "Name": "teste-vpc"
            }
          }
        }
      ]
    }
  ]
}